# ircbot

./: .gitignore  CMakeLists.txt  README.md
ircchatbot/: CMakeLists.txt  channels.cpp  channels.hpp  chatbot.cpp  chatbot.hpp  commandshandler.cpp  commandshandler.hpp  database.cpp  database.hpp  echopage.cpp  echopage.hpp  ircauthsequence.hpp  ircclient.cpp  ircclient.hpp  ircmessage.cpp  ircmessage.hpp  main.cpp  users.cpp  users.hpp
